# amazon-kvs-stun

./: CMakeLists.txt  README.md
amazon-kvs-stun/source/: stunDeserialiser.c  stunSerialiser.c
amazon-kvs-stun/source/include/: stunDataTypes.h  stunDeserialiser.h  stunSerialiser.h
lib/source/: stun_deserializer.c  stun_serializer.c
lib/source/include/: stun_data_types.h  stun_deserializer.h
source/: crc32.c  endianness.c  hmac.c  stun.c  test.c
source/common/: stun_e.c
source/common/include/: stun_e.h
source/include/: Include_i.h  commondefs.h  crc32.h  hmac.h  stun.h
